# loudgain

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build-cygwin.sh  config.h.in  loudgain.sln  loudgain.vcxproj  loudgain.vcxproj.filters
cmake/: FindEBUR128.cmake  FindPkgConfig.cmake
debian/: changelog  control  copyright  watch
docs/: breakpoints.gdb  loudgain.1  loudgain.1.html  loudgain.1.md  mp3gain-mentions.txt
src/: lg-util.h  loudgain.c  loudgain.vcxproj  loudgain.vcxproj.filters  printf.c  printf.h  scan.c  scan.h  syslog.h  tag.cc  tag.h
src/sys/: ioctl.h
